fix avatar on iPhone 5

--- a/src/styles/components/specific/buttons-sandbox.scss
+++ b/src/styles/components/specific/buttons-sandbox.scss
@@ -11,6 +11,10 @@
       margin-right: 3px;
       width: 18px;
     }
+
+    @include media(xxxs) {
+      display: none;
+    }
   }
 }
 
